Updated css to fix the gap space above the page

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   background-attachment: fixed;
   background-size: cover;
   min-height: 100vh;
+  padding-top: 50px;
 }
 
 h1 {
@@ -40,7 +41,7 @@ a:hover {
 
 .App {
   max-width: 1000px;
-  margin: 50px auto;
+  margin: 0 auto 50px;
   padding: 30px 60px;
   border-radius: 4px;
   box-shadow: 0px 0px 15px 5px rgb(0 0 0 / 20%);
